firstdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx

spec:
  replicas: 3 #it should create three pod
  selector: #using selector i am managing the three pod
    matchLabels:
      app: nginx #all this pod will have this particular label
  template: #inside your pod we are going to download image and create container
  #using template we have define how the container if going be launching inside your pod
    metadata:
      labels:
        app: nginx #same
    spec:
      containers:
      - name: nginx 
        image: nginx:1.14.2
        ports:
        - containerPort: 80
