mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql 
    spec:
      containers:
      - name: mysql 
        image: mysql:5.6
        ports:
          - containerPort: 3306
        volumeMount:
          - name: mysql-persistent-volume
            mountPath: /var/lib/mysql
          - name: usermanagement-db-creation-script
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: task-pv-claim
        - name: usermanagement-db-creation-script
          configMap:
            name: usermanagement-db-creation-script
