frontendservice.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-service
spec:
  type: NodePort
  selector:
    app: usermgmt-webapp
  ports:
    - port: 80
      targetPort: 8080
