ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  labels:
    app: app1-nginx
spec:
  type: clusterIP
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
